@@ -18,13 +18,13 @@ void V2Relations::output(FILE* out)
 	{
 		fprintf(out, "\t\tmilitary_access=yes\n");
 	}
-	if (last_war.isSet())
-	{
-		fprintf(out, "\t\tlast_war=%s\n", last_war.toString().c_str());
-	}
 	if (last_send_diplomat.isSet())
 	{
-		fprintf(out, "\t\tlast_send_diplomat=%s\n", last_send_diplomat.toString().c_str());
+		fprintf(out, "\t\tlast_send_diplomat=\"%s\"\n", last_send_diplomat.toString().c_str());
+	}
+	if (last_war.isSet())
+	{
+		fprintf(out, "\t\tlast_war=\"%s\"\n", last_war.toString().c_str());
 	}
 	if (level != 2)
 	{
